# django-dbtemplates

./: .coveragerc  .dockerignore  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CONTRIBUTORS  INSTALL  LICENSE  MANIFEST.in  README  README.rst  buildspec.yml  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
.tx/: config
dbtemplates/: __init__.py  admin.py  apps.py  cache.py  conf.py  loader.py  management.py  middleware.py  models.py  settings.py  signal_handlers.py  sync_templates.py  test_cases.py  test_settings.py  test_signal_handlers.py  tests.py  urls.py  utils.py
dbtemplates/management/: __init__.py
dbtemplates/management/commands/: check_template_syntax.py  create_error_templates.py  sync_templates.py
dbtemplates/migrations/: 0001_initial.py  0002_alter_template_creation_date_and_more.py  0002_auto_20180703_0742.py  0002_auto__del_unique_template_name.py  0003_alter_template_name.py  0003_auto__add_unique_template_name.py  0003_template_template_name_idx.py  0003_templatesite_alter_template_sites_and_more.py
dbtemplates/south_migrations/: 0001_initial.py  0002_auto__del_unique_template_name.py
dbtemplates/utils/: cache.py  settings.py  template.py
docker/: Dockerfile  README.md
docs/: Makefile  advanced.txt  changelog.txt  conf.py  index.txt  make.bat  overview.txt  settings.txt
example/: manage.py  requirements.txt  settings.py  urls.py
requirements/: default.txt  tests.txt
template/: README  models.py
template/loaders/: database.py
(+26 files in other folders)
